[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/Options/CoverScreen.gd" type="Script" id=1]
[ext_resource path="res://src/Fonts/X8Bossfont.fnt" type="BitmapFont" id=2]
[ext_resource path="res://src/Options/Highlighter.gd" type="Script" id=3]
[ext_resource path="res://src/Fonts/Xclassicfont.fnt" type="BitmapFont" id=4]
[ext_resource path="res://src/Fonts/X8bitmapfont.fnt" type="BitmapFont" id=5]
[ext_resource path="res://src/Options/KeyBinder/KeyConfig.gd" type="Script" id=6]
[ext_resource path="res://src/Options/PortInput.gd" type="Script" id=7]
[ext_resource path="res://src/Options/KeymapExit.gd" type="Script" id=8]
[ext_resource path="res://src/Sounds/FX - Menu Switch.ogg" type="AudioStream" id=9]
[ext_resource path="res://src/Options/pause_bg.png" type="Texture" id=10]
[ext_resource path="res://src/Options/KeyBinder/scrollbar.tres" type="Theme" id=11]
[ext_resource path="res://src/Options/SplitType.gd" type="Script" id=12]
[ext_resource path="res://src/Options/SplitOnBossKill.gd" type="Script" id=13]
[ext_resource path="res://src/Options/SplitPortButton.gd" type="Script" id=14]
[ext_resource path="res://src/Options/StartWebsocketButton.gd" type="Script" id=15]

[sub_resource type="ShortCut" id=1]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 5 )
Fonts/fonts/large = ExtResource( 5 )
Fonts/fonts/normal = ExtResource( 5 )

[node name="LivesplitMenu" type="CanvasLayer"]
layer = 5
script = ExtResource( 6 )
menu_path = NodePath("Menu")
initial_focus = NodePath("Menu/exit")
exit_action = "select"
start_emit_event = "update_options"

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="bg" type="TextureRect" parent="Menu"]
modulate = Color( 0.101961, 0.101961, 0.101961, 1 )
margin_right = 398.0
margin_bottom = 224.0
texture = ExtResource( 10 )

[node name="Title" type="Control" parent="Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_top = 5.0
margin_right = 30.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 16 )

[node name="detail" type="Label" parent="Menu/Title"]
modulate = Color( 0.2, 0.247059, 0.415686, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.5
margin_top = -7.0
margin_right = 44.5
margin_bottom = 9.0
custom_colors/font_color_shadow = Color( 0.372549, 0.372549, 0.372549, 1 )
custom_fonts/font = ExtResource( 2 )
text = "-               -"
align = 1
uppercase = true

[node name="text" type="Label" parent="Menu/Title"]
modulate = Color( 0.407843, 0.792157, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -7.0
margin_right = 60.0
margin_bottom = 9.0
custom_colors/font_color_shadow = Color( 0.372549, 0.372549, 0.372549, 1 )
custom_fonts/font = ExtResource( 2 )
text = "LIVESPLIT_TITLE"
align = 1
uppercase = true

[node name="scrollContainer" type="ScrollContainer" parent="Menu"]
margin_left = 96.0
margin_top = 31.0
margin_right = 346.0
margin_bottom = 194.0
theme = ExtResource( 11 )
follow_focus = true

[node name="OptionHolder" type="VBoxContainer" parent="Menu/scrollContainer"]
margin_right = 200.0
margin_bottom = 41.0
grow_horizontal = 2
custom_constants/separation = 3

[node name="SplitOnBossKill" type="Control" parent="Menu/scrollContainer/OptionHolder"]
margin_right = 200.0
margin_bottom = 8.0
rect_min_size = Vector2( 200, 8 )
size_flags_horizontal = 0
script = ExtResource( 3 )
objects_to_light = [ NodePath("OptionName") ]
focus_group = [ NodePath("Button") ]
idle_color = Color( 0.407843, 0.792157, 1, 1 )
focus_color = Color( 0.984314, 1, 0.686275, 1 )

[node name="OptionName" type="Label" parent="Menu/scrollContainer/OptionHolder/SplitOnBossKill"]
modulate = Color( 0.407843, 0.792157, 1, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -9.0
margin_right = 92.0
margin_bottom = 5.0
custom_colors/font_color_shadow = Color( 0.415686, 0.415686, 0.415686, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 4 )
text = "SPLIT_OPTION"
uppercase = true

[node name="Button" type="TextureButton" parent="Menu/scrollContainer/OptionHolder/SplitOnBossKill"]
modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -6.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 8 )
action_mode = 0
shortcut = SubResource( 1 )
script = ExtResource( 13 )
menu_path = NodePath("../../../../..")

[node name="Value" type="Label" parent="Menu/scrollContainer/OptionHolder/SplitOnBossKill/Button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -7.0
margin_bottom = 7.0
custom_colors/font_color_shadow = Color( 0.415686, 0.415686, 0.415686, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 4 )
text = "Value"
align = 2
valign = 1
uppercase = true

[node name="SplitPort" type="Control" parent="Menu/scrollContainer/OptionHolder"]
margin_top = 11.0
margin_right = 200.0
margin_bottom = 19.0
rect_min_size = Vector2( 200, 8 )
size_flags_horizontal = 0
script = ExtResource( 3 )
objects_to_light = [ NodePath("OptionName") ]
focus_group = [ NodePath("Button") ]
idle_color = Color( 0.407843, 0.792157, 1, 1 )
focus_color = Color( 0.984314, 1, 0.686275, 1 )

[node name="OptionName" type="Label" parent="Menu/scrollContainer/OptionHolder/SplitPort"]
modulate = Color( 0.407843, 0.792157, 1, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -9.0
margin_right = 92.0
margin_bottom = 5.0
custom_colors/font_color_shadow = Color( 0.415686, 0.415686, 0.415686, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 4 )
text = "SPLIT_PORT"
uppercase = true

[node name="Button" type="TextureButton" parent="Menu/scrollContainer/OptionHolder/SplitPort"]
modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -6.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 8 )
action_mode = 0
shortcut = SubResource( 1 )
script = ExtResource( 14 )
menu_path = NodePath("../../../../..")

[node name="Value" type="Label" parent="Menu/scrollContainer/OptionHolder/SplitPort/Button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -7.0
margin_bottom = 7.0
custom_colors/font_color_shadow = Color( 0.415686, 0.415686, 0.415686, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 4 )
text = "16834"
align = 2
valign = 1
uppercase = true

[node name="PortInput" type="SpinBox" parent="Menu/scrollContainer/OptionHolder/SplitPort"]
visible = false
margin_left = 156.0
margin_top = -6.0
margin_right = 242.0
margin_bottom = 15.0
focus_mode = 2
mouse_default_cursor_shape = 1
theme = SubResource( 2 )
min_value = 1024.0
max_value = 65534.0
value = 16834.0
rounded = true
editable = false
script = ExtResource( 7 )

[node name="SplitType" type="Control" parent="Menu/scrollContainer/OptionHolder"]
margin_top = 22.0
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 8 )
size_flags_horizontal = 0
script = ExtResource( 3 )
objects_to_light = [ NodePath("OptionName") ]
focus_group = [ NodePath("Button") ]
idle_color = Color( 0.407843, 0.792157, 1, 1 )
focus_color = Color( 0.984314, 1, 0.686275, 1 )

[node name="OptionName" type="Label" parent="Menu/scrollContainer/OptionHolder/SplitType"]
modulate = Color( 0.407843, 0.792157, 1, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -9.0
margin_right = 92.0
margin_bottom = 5.0
custom_colors/font_color_shadow = Color( 0.415686, 0.415686, 0.415686, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 4 )
text = "SPLIT_TYPE"
uppercase = true

[node name="Button" type="TextureButton" parent="Menu/scrollContainer/OptionHolder/SplitType"]
modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -6.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 8 )
action_mode = 0
shortcut = SubResource( 1 )
script = ExtResource( 12 )
menu_path = NodePath("../../../../..")

[node name="Value" type="Label" parent="Menu/scrollContainer/OptionHolder/SplitType/Button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -7.0
margin_bottom = 7.0
custom_colors/font_color_shadow = Color( 0.415686, 0.415686, 0.415686, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 4 )
text = "Value"
align = 2
valign = 1
uppercase = true

[node name="SplitServer" type="Control" parent="Menu/scrollContainer/OptionHolder"]
margin_top = 33.0
margin_right = 200.0
margin_bottom = 41.0
rect_min_size = Vector2( 200, 8 )
size_flags_horizontal = 0
script = ExtResource( 3 )
objects_to_light = [ NodePath("OptionName") ]
focus_group = [ NodePath("Button") ]
idle_color = Color( 0.407843, 0.792157, 1, 1 )
focus_color = Color( 0.984314, 1, 0.686275, 1 )

[node name="OptionName" type="Label" parent="Menu/scrollContainer/OptionHolder/SplitServer"]
modulate = Color( 0.407843, 0.792157, 1, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -9.0
margin_right = 92.0
margin_bottom = 5.0
custom_colors/font_color_shadow = Color( 0.415686, 0.415686, 0.415686, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 4 )
text = "SPLIT_SERVER"
uppercase = true

[node name="Button" type="TextureButton" parent="Menu/scrollContainer/OptionHolder/SplitServer"]
modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -6.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 8 )
action_mode = 0
shortcut = SubResource( 1 )
script = ExtResource( 15 )
menu_path = NodePath("../../../../..")

[node name="Value" type="Label" parent="Menu/scrollContainer/OptionHolder/SplitServer/Button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -7.0
margin_bottom = 7.0
custom_colors/font_color_shadow = Color( 0.415686, 0.415686, 0.415686, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 4 )
text = "Value"
align = 2
valign = 1
uppercase = true

[node name="exit" type="TextureButton" parent="Menu"]
modulate = Color( 0.407843, 0.792157, 1, 1 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -20.0
margin_right = 32.0
margin_bottom = -10.0
action_mode = 0
script = ExtResource( 8 )
idle_color = Color( 0.407843, 0.792157, 1, 1 )
focus_color = Color( 0.984314, 1, 0.686275, 1 )
menu_path = NodePath("../..")

[node name="text" type="Label" parent="Menu/exit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.5
margin_top = -7.0
margin_right = 30.5
margin_bottom = 7.0
custom_colors/font_color_shadow = Color( 0.415686, 0.415686, 0.415686, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 4 )
text = "EXIT_BUTTON"
align = 1
uppercase = true

[node name="choice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -4.0
bus = "SFX"

[node name="Fader" type="ColorRect" parent="."]
margin_right = 398.0
margin_bottom = 224.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
script = ExtResource( 1 )
menu = NodePath("../Menu")

[connection signal="focus_entered" from="Menu/scrollContainer/OptionHolder/SplitOnBossKill/Button" to="Menu/scrollContainer/OptionHolder/SplitOnBossKill/Button" method="_on_focus_entered"]
[connection signal="focus_exited" from="Menu/scrollContainer/OptionHolder/SplitOnBossKill/Button" to="Menu/scrollContainer/OptionHolder/SplitOnBossKill/Button" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Menu/scrollContainer/OptionHolder/SplitOnBossKill/Button" to="Menu/scrollContainer/OptionHolder/SplitOnBossKill/Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/scrollContainer/OptionHolder/SplitOnBossKill/Button" to="Menu/scrollContainer/OptionHolder/SplitOnBossKill/Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/scrollContainer/OptionHolder/SplitOnBossKill/Button" to="Menu/scrollContainer/OptionHolder/SplitOnBossKill/Button" method="_on_pressed"]
[connection signal="focus_entered" from="Menu/scrollContainer/OptionHolder/SplitPort/Button" to="Menu/scrollContainer/OptionHolder/SplitPort/Button" method="_on_focus_entered"]
[connection signal="focus_exited" from="Menu/scrollContainer/OptionHolder/SplitPort/Button" to="Menu/scrollContainer/OptionHolder/SplitPort/Button" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Menu/scrollContainer/OptionHolder/SplitPort/Button" to="Menu/scrollContainer/OptionHolder/SplitPort/Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/scrollContainer/OptionHolder/SplitPort/Button" to="Menu/scrollContainer/OptionHolder/SplitPort/Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/scrollContainer/OptionHolder/SplitPort/Button" to="Menu/scrollContainer/OptionHolder/SplitPort/Button" method="on_press"]
[connection signal="value_changed" from="Menu/scrollContainer/OptionHolder/SplitPort/PortInput" to="Menu/scrollContainer/OptionHolder/SplitPort/Button" method="set_split_port"]
[connection signal="focus_entered" from="Menu/scrollContainer/OptionHolder/SplitType/Button" to="Menu/scrollContainer/OptionHolder/SplitType/Button" method="_on_focus_entered"]
[connection signal="focus_exited" from="Menu/scrollContainer/OptionHolder/SplitType/Button" to="Menu/scrollContainer/OptionHolder/SplitType/Button" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Menu/scrollContainer/OptionHolder/SplitType/Button" to="Menu/scrollContainer/OptionHolder/SplitType/Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/scrollContainer/OptionHolder/SplitType/Button" to="Menu/scrollContainer/OptionHolder/SplitType/Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/scrollContainer/OptionHolder/SplitType/Button" to="Menu/scrollContainer/OptionHolder/SplitType/Button" method="_on_pressed"]
[connection signal="focus_entered" from="Menu/scrollContainer/OptionHolder/SplitServer/Button" to="Menu/scrollContainer/OptionHolder/SplitServer/Button" method="_on_focus_entered"]
[connection signal="focus_exited" from="Menu/scrollContainer/OptionHolder/SplitServer/Button" to="Menu/scrollContainer/OptionHolder/SplitServer/Button" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Menu/scrollContainer/OptionHolder/SplitServer/Button" to="Menu/scrollContainer/OptionHolder/SplitServer/Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/scrollContainer/OptionHolder/SplitServer/Button" to="Menu/scrollContainer/OptionHolder/SplitServer/Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/scrollContainer/OptionHolder/SplitServer/Button" to="Menu/scrollContainer/OptionHolder/SplitServer/Button" method="_on_pressed"]
[connection signal="focus_entered" from="Menu/exit" to="Menu/exit" method="_on_focus_entered"]
[connection signal="focus_exited" from="Menu/exit" to="Menu/exit" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Menu/exit" to="Menu/exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Menu/exit" to="Menu/exit" method="_on_mouse_exited"]
[connection signal="pressed" from="Menu/exit" to="Menu/exit" method="_on_pressed"]
